--- a/HealthClub/frontend/src/components/styles/color.css
+++ b/HealthClub/frontend/src/components/styles/color.css
@@ -5,10 +5,11 @@
     background-color: #4d4d4d !important;
 }
 .yellow-color{
-    color: #fde303 !important;
+    /* color: #fde303 !important; */
+    color: #F69E26 !important;
 }
 .yellow-background{
-    background-color: #fde303 !important;
+    background-color: #F69E26 !important;
 }
 .purple-color{
     color: #663399 !important;
