--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -90,27 +90,26 @@
           <div class="col-md-3 animate-box">
             <div class="price-box">
               <h2 class="pricing-plan">{{offer.name}}</h2>
-              <div class="price"><sup class="currency"></sup>{{offer.discount}} % 
-                {% if offer.due %}
-                  <h5>  Starting from {{offer.created_on}} </h5>
-                  <h5>  Untill {{offer.due|timeuntil}} </h5>
-                {% endif %}
-				<small>
+              <div class="price"><sup class="currency"></sup>{{offer.discount}}% 
+				<small class="pt-3">
 					{% if offer.number_of_months is 1 %}
-					per month 
-
-					 {% elif offer.number_of_months is 12 %}
-					 per year 
+					  per month 
+					{% elif offer.number_of_months is 12 %}
+					  per year 
 					{% else %}
-					{{ offer.number_of_months }} months
+					  <b>{{ offer.number_of_months }} months</b>
 					{% endif %}
 				</small></div>
               <ul class="classes">
-                <li><b> {{offer.days_num  }} per week </b></li>
+                <li><b> {{offer.days_num}} per week </b></li>
                 <li>  {{offer.num_of_class}} class </li>
               </ul>
               <a href="{% url 'contact' %}" class="btn btn-select-plan btn-sm">Select Plan</a>
+              {% if offer.due %}
+                  <h5 class="pt-5 text-danger"> <b>Ends in {{offer.due|timeuntil}}</b> </h5>
+                {% endif %}
             </div>
+            
           </div>
           {% endfor %}
         </div>
