--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -86,10 +86,11 @@
 				<div class="col-md-3 animate-box">
 					<div class="price-box">
 						<h2 class="pricing-plan">{{offer.name}}</h2>
-						<div class="price"><sup class="currency"></sup> {{offer.discount}} %
+						<div class="price"><sup class="currency"></sup> 
+							{{offer.discount}}%
 							{% if offer.due %}
-							<h5 class='pt-3'> Starting from {{offer.created_on}} </h5>
-							<h5> Untill {{offer.due|timeuntil}} </h5>
+							<h5 class='py-3'> Starting from {{offer.created_on}} </h5>
+							<h5> Ends in {{offer.due|timeuntil}} </h5>
 							{% endif %}
 							<small>
 								{% if offer.number_of_months is 1 %}
@@ -104,7 +105,7 @@
 						</div>
 						<ul class="classes">
 							<li><b> {{offer.days_num }} per week </b></li>
-							<li> {{offer.num_of_class}} class </li>
+							<li> <b>{{offer.num_of_class}}</b> classes </li>
 						</ul>
 						<a href="{% url 'contact' %}" class="btn btn-select-plan btn-sm">Select Plan</a>
 					</div>
@@ -183,7 +184,9 @@
 							alt="Event"></a>
 					<div class="blog-text">
 						<h3><a href="{% url 'event' event.id %}">{{event.event}}</a></h3>
-						<span class="posted_on">Valid for {{event.due|timeuntil}} from now!</span>
+						{% if event.due %}
+						<span class="posted_on">Ends in {{event.due|timeuntil}}!</span>
+						{% endif %}
 						<!-- <span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span> -->
 						<p>{{event.description}}</p>
 
