--- a/HealthClub/templates/physio-slim/event.html
+++ b/HealthClub/templates/physio-slim/event.html
@@ -13,8 +13,9 @@
     <div class="row g-0 my-4">
       <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box ">
         <div class="card-body">
-          <h3 class="card-title"> {{ event.event }}</h3>
+          <h3 class="card-title"> {{ event.name }}</h3>
           <p class="card-text">{{event.description}}.</p>
+          <p class="card-text">{{event.price}}.</p>
           <!-- <p class="card-text">{{event.created_on}}</p> -->
           {% if event.due %}
           <p class="card-text">This Event is valid for <span class="card-text" style="color: #fde303; font-size: 30px;">
