--- a/HealthClub/templates/physio-slim/events.html
+++ b/HealthClub/templates/physio-slim/events.html
@@ -25,7 +25,7 @@
                 alt=""
             /></span>
 
-            <h3>{{event.event}}</h3>
+            <h3>{{event.name}}</h3>
 
             <p>{{event.description}}</p>
             
