--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -56,7 +56,7 @@
 	<!-- Modernizr JS -->
 	<script src="{% static 'js/modernizr-2.6.2.min.js' %}"></script>
 	<!-- paypal -->
-	<script src="https://www.paypal.com/sdk/js?client-id=AYe3eCf7j5YDIYfiNnZfZ8DECp5xPGllm12wzLNQWcVeYLjb2fh_5p-rj0-O1rsXjrhuyM0KcoxwKw-L&currency=USD"></script>
+	<!-- <script src="https://www.paypal.com/sdk/js?client-id=ARrfNJqBDd__DeGjQnu5tqtykKkTT1fou7YPt4jrALOfUzObL1sX-r49EGuDN7ZL_QfIpvN3__8zwDq7&currency=USD"></script> -->
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
