--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -11,7 +11,7 @@
         <div class="col-md-8 col-md-offset-2 text-center">
           <div class="display-t">
             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-              <h1>Physio Slim</h1>
+              <h1>{{branch.name}}</h1>
             </div>
           </div>
         </div>
@@ -21,9 +21,10 @@
 </header>
 
 <!-- Classes  -->
-<div class="container">
+<div class="container my-5">
+ 
   <div id="fh5co-services" class="fh5co-bg-section">
-    <div class="container">
+    <div class="container my-5">
       <div class="row">
         {% for class in classes %}
         <div class="col-md-4 text-center animate-box">
@@ -58,10 +59,16 @@
           <div class="trainer">
             <a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{trainer.photo}}" alt="trainer"></a>
             <div class="title">
-              <h3><a href="#">{{trainer.name}}</a></h3>
-              <span>{{trainer.bio}}</span>
-              <span>{{trainer.years_of_experience}}</span>
+              <h3><a href="{% url 'trainers' branch.id %}">{{trainer.name}}</a></h3>
             </div>
+            <p class="px-4 py-3">{{trainer.bio}}</p>
+						{% if not trainer.years_of_experience == 0 %}
+							{% if trainer.years_of_experience == 1 %}
+								<p class="px-4 pb-3 "><b>{{trainer.years_of_experience}} </b>year of experience</p>
+							{% else %}
+								<p class="px-4 pb-3"><b>{{trainer.years_of_experience}} </b>years of experience</p>
+							{% endif %}
+						{% endif %}
           </div>
         </div>
         {% endfor %}
