--- a/HealthClub/templates/physio-slim/trainers.html
+++ b/HealthClub/templates/physio-slim/trainers.html
@@ -3,7 +3,8 @@
 {% block body %}
 	<div class="fh5co-loader"></div>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" 
+	style="background-image:url({% static 'images/trainers.jpg' %});" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -32,13 +33,15 @@
 				<div class="col-md-4 col-sm-4 animate-box" style="padding-bottom: 5%;">
 					<div class="trainer">
 						<a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{trainer.photo}}" alt="trainer"></a>
-						<p class="px-4">asdasiduashdiuahs huasuidh uiiuas duisdiu</p>
-						<div class="title">
-							<h3><a href="#">{{trainer.name}}</a></h3>
-							<span>{{trainer.bio}}</span>
-							<span>{{trainer.years_of_experience}}</span>
-						</div>
-	
+						<p class="px-4 pt-2"><b>{{trainer.name}}</b></p>
+						<p class="px-4">{{trainer.bio}}</p>
+						{% if not trainer.years_of_experience == 0 %}
+							{% if trainer.years_of_experience == 1 %}
+								<p class="px-4 pb-3"><b>{{trainer.years_of_experience}} </b>year of experience</p>
+							{% else %}
+								<p class="px-4 pb-3"><b>{{trainer.years_of_experience}} </b>years of experience</p>
+							{% endif %}
+						{% endif %}
 					</div>
 				</div>
 				{% endfor %}
