--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -58,10 +58,10 @@
         <div class="col-md-4 col-sm-4 animate-box">
           <div class="trainer">
             <a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{trainer.photo}}" alt="trainer"></a>
+            <p class="px-4">{{trainer.bio}}</p>
             <div class="title">
               <h3><a href="#">{{trainer.name}}</a></h3>
-              <span>{{trainer.bio}}</span>
-              <span>{{trainer.years_of_experience}}</span>
+              <span>{{trainer.years_of_experience}} Years of experience </span>
             </div>
           </div>
         </div>
