--- a/HealthClub/templates/physio-slim/classes.html
+++ b/HealthClub/templates/physio-slim/classes.html
@@ -49,7 +49,9 @@
 								</a>
 								{% endif %}
 							{% endif %}
-							<a href="{% url 'ClassPayment' class.id %}" class="btn btn-select-plan btn-sm">Pay Now</a>
+							{% if not request.user.is_superuser %}
+							<a href="{% url 'ClassPayment' class.id %}" class="btn btn-primary btn-sm">Pay Now</a>
+							{% endif %}
 						{% endif %}
 						<a href="{% url 'schedule' class.id %}" class="btn btn-primary btn-outline btn-sm">
 							Details 
