--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -40,35 +40,6 @@
 	</div>
 </div>
 <!-- end boxes -->
-<!-- show trainers -->
-<div id="fh5co-trainer">
-	<div class="container">
-		<div class="row">
-			{% for trainer in trainers %}
-			<div class="col-md-4 col-sm-4 animate-box">
-				<div class="trainer">
-					<a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{trainer.photo}}" alt="trainer"></a>
-					<div class="title">
-						<h3><a href="#">{{trainer.name}}</a></h3>
-						<span>{{trainer.bio}}</span>
-						<span>{{trainer.years_of_experience}}</span>
-					</div>
-					<div class="desc text-center">
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			{% endfor %}
-
-		</div>
-	</div>
-</div>
-<!-- end trainers -->
 <!-- pricing -->
 <div id="fh5co-pricing">
 	<div class="container">
@@ -86,10 +57,12 @@
 				<div class="col-md-3 animate-box">
 					<div class="price-box">
 						<h2 class="pricing-plan">{{offer.name}}</h2>
-						<div class="price"><sup class="currency"></sup> {{offer.discount}} %
+						<div class="price"><sup class="currency"></sup> {{offer.discount}}%
 							{% if offer.due %}
-							<h5 class='pt-3'> Starting from {{offer.created_on}} </h5>
-							<h5> Untill {{offer.due|timeuntil}} </h5>
+							<ul class="classes">
+							<li style="color:#495057 ;">Starting from <b style="color: #fde303;" >{{offer.created_on}}</b>  </li>
+							<li style="color:#495057 ;" >Untill <b style="color: #fde303;" >{{offer.due|timeuntil}} </b> </li>
+							</ul>
 							{% endif %}
 							<small>
 								{% if offer.number_of_months is 1 %}
@@ -106,16 +79,24 @@
 							<li><b> {{offer.days_num }} per week </b></li>
 							<li> {{offer.num_of_class}} class </li>
 						</ul>
-						<a href="{% url 'contact' %}" class="btn btn-select-plan btn-sm">Select Plan</a>
-						<a href="{% url 'MainOfferPayment' offer.id %}" class="btn btn-select-plan btn-sm">Pay Now</a>
+						{% if not request.user.is_superuser %}
+							{% if request.user.is_anonymous %}
+							<a href="{% url 'contact' %}" class="btn btn-primary btn-sm">Select Plan</a>
+							{% else %}
+							<a href="{% url 'MainOfferPayment' offer.id %}" class="btn btn-primary btn-sm">Pay Now</a>
+							{% endif %}
+						{% endif %}
 					</div>
 				</div>
 				{% endfor %}
 			</div>
+		</div> 
+			<a href="{% url 'main-offers' %}" class="btn btn-primary btn-outline btn-sm">
+				More <i class="icon-arrow-right"></i>
+			</a>
+		
+		
 		</div>
-		<a href="{% url 'main-offers' %}" class="btn btn-primary btn-outline btn-sm">
-			More <i class="icon-arrow-right"></i>
-		</a>
 	</div>
 
 </div>
@@ -187,8 +168,13 @@
 						<span class="posted_on">Valid for {{event.due|timeuntil}} from now!</span>
 						<!-- <span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span> -->
 						<p>{{event.description}}</p>
-
-						<a href="{% url 'event' event.id %}" class="btn btn-primary">Book Now</a>
+						{% if not request.user.is_superuser %}
+							{% if request.user.is_anonymous %}
+							<a href="{% url 'event' event.id %}" class="btn btn-primary btn-sm">Select Plan</a>
+							{% else %}
+							<a href="{% url 'MainOfferPayment' offer.id %}" class="btn btn-primary btn-sm">Pay Now</a>
+							{% endif %}
+						{% endif %}
 					</div>
 				</div>
 			</div>
