--- a/HealthClub/templates/physio-slim/offers.html
+++ b/HealthClub/templates/physio-slim/offers.html
@@ -35,7 +35,7 @@
 				<div class="col-md-4 col-lg-3 animate-box">
 					<div class="price-box">
 						<h2 class="pricing-plan">{{offer.name}}</h2>
-						<div class="price"><sup class="currency">{{offer.price}}</sup>{{offer.discount}} %
+						<div class="price"><sup class="currency"></sup>{{offer.discount}}%
 							<ul class="classes">
 								<li style="color:#495057 ;">Starting from <b style="color: #fde303;" >{{offer.created_on}}</b>  </li>
 								<li style="color:#495057 ;" >Untill <b style="color: #fde303;" >{{offer.due|timeuntil}} </b> </li>
@@ -55,7 +55,13 @@
 							<li><b> {{offer.days_num }} per week </b></li>
 							<li> {{offer.num_of_class}} class </li>
 						</ul>
-						<a href="{% url 'OfferPayment' offer.id %}" class="btn btn-select-plan btn-sm">Pay Now</a>
+						{% if not request.user.is_superuser %}
+							{% if request.user.is_anonymous %}
+							<a href="{% url 'contact' %}" class="btn btn-primary btn-sm">Select Plan</a>
+							{% else %}
+							<a href="{% url 'OfferPayment' offer.id %}" class="btn btn-primary btn-sm">Pay Now</a>
+							{% endif %}
+						{% endif %}
 					</div>
 				</div>
 				{% endfor %}
