--- a/HealthClub/templates/physio-slim/events.html
+++ b/HealthClub/templates/physio-slim/events.html
@@ -17,7 +17,7 @@
         {% for event in events %}
 
         <div class="col-md-4 text-center animate-box">
-          <div class="services">
+          <div class="services" style="height: 80vh;">
             <span
               ><img
                 class="img-responsive image"
@@ -25,7 +25,7 @@
                 alt=""
             /></span>
 
-            <h3>{{event.name}}</h3>
+            <h3>{{event.event}}</h3>
 
             <p>{{event.description}}</p>
             
