--- a/HealthClub/templates/physio-slim/paypal_form.html
+++ b/HealthClub/templates/physio-slim/paypal_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body %}
 
-<div class="container" style="margin: 5%;">
+<div class="container text-center" style="margin: 5%;">
   <div class="row">
     <h3 class="tex-danger">Payment</h3>
     {% csrf_token %}
