--- a/HealthClub/templates/physio-slim/about.html
+++ b/HealthClub/templates/physio-slim/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body %}
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url({% static 'images/login1.jpg' %}); " data-stellar-background-ratio="0.5">     
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url({% static 'images/event.jpg' %}); " data-stellar-background-ratio="0.5">     
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
