--- a/HealthClub/templates/physio-slim/event.html
+++ b/HealthClub/templates/physio-slim/event.html
@@ -12,13 +12,15 @@
     {% for event in event %}
     <div class="row g-0 my-4">
       <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box ">
+        <img src="{{MEDIA_URL}}/{{event.photo}}" style="height: 50vh;  align-items: center;" alt="">
         <div class="card-body">
-          <h3 class="card-title"> {{ event.event }}</h3>
+            
+          <h3 class="card-title py-5"> {{ event.event }}</h3>
           <p class="card-text">{{event.description}}.</p>
-          <p class="card-text">{{event.price}}.</p>
+         
           <!-- <p class="card-text">{{event.created_on}}</p> -->
           {% if event.due %}
-          <p class="card-text">This Event is valid for <span class="card-text" style="color: #fde303; font-size: 30px;">
+          <p class="card-text py-3">Ends in <span class="card-text" style="color: #d63031; font-size: 30px;">
               {{event.due|timeuntil}} </span> from now !</p>
           {% endif %}
 
@@ -36,8 +38,8 @@
                   {% if going_to %}
                       <p><a href="{% url 'not-going-to-event' event.id %}" class="btn"
                           style="background-color: #e67e22; color:white">changed my mind</a></p>
-                      <a href="{% url 'EventPayment' event.id %}" class="btn"
-                      style="background-color: #e67e22; color:white">Pay Now</a>
+                          
+                      
                   {% else %}
                     {% if available_places == 0 and not request.user in this_event_participants %}
                         <p><a class="btn btn-primary btn-outline btn-sm py-3" disabled>Going to?</a></p>
@@ -51,9 +53,7 @@
 
         </div>
       </div>
-      <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box ">
-        <img src="{{MEDIA_URL}}/{{event.photo}}" style="height: 50vh;  align-items: center;" alt="">
-      </div>
+     
 
     </div>
     {% endfor %}
