--- a/HealthClub/templates/physio-slim/m_offers.html
+++ b/HealthClub/templates/physio-slim/m_offers.html
@@ -33,13 +33,9 @@
 		<div class="pricing">
 		  {% for offer in offers %}
 		  <div class="col-md-3 animate-box">
-			<div class="price-box">
+			<div class="price-box" style="height: 70vh;">
 			  <h2 class="pricing-plan">{{offer.name}}</h2>
 			  <div class="price"><sup class="currency"></sup>{{offer.discount}}% 
-				<ul class="classes">
-					<li style="color:#495057 ;">Starting from <b style="color: #fde303;" >{{offer.created_on}}</b>  </li>
-					<li style="color:#495057 ;" >Untill <b style="color: #fde303;" >{{offer.due|timeuntil}} </b> </li>
-				</ul>
 				<small>
 					{% if offer.number_of_months is 1 %}
 					per month 
@@ -54,13 +50,14 @@
 				<li><b> {{offer.days_num}} per week </b></li>
 				<li>  {{offer.num_of_class}} class </li>
 			  </ul>
+			  {% if offer.due %}
+				<ul class="classes">
+				<li style="color:#495057 ;" >Ends in <b style="color: #d63031;" >{{offer.due|timeuntil}} </b> </li>
+				</ul>
+		 	 {% endif %}
 			{% if not request.user.is_superuser %}
-				{% if request.user.is_anonymous %}
-					<a href="{% url 'contact' %}" class="btn btn-primary btn-sm">Select Plan</a>
-				{% else %}
-					<a href="{% url 'MainOfferPayment' offer.id %}" class="btn btn-primary btn-sm">Pay Now</a>
-				{% endif %}
-			{% endif %}
+			  	<a href="{% url 'MainOfferPayment' mainoffer_id=offer.id %}" class="btn btn-primary btn-sm">Pay Now</a>
+		  	{% endif %}
 			</div>
 		  </div>
 		  {% endfor %}
